# sat-o-mat

./: Cargo.toml  README.md  build.rs
benches/: predict_passes.rs
examples/tle/: nanoff.txt  nanoff_b.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx
frontend/src/api/: client.ts  predict.ts  station.ts  tasks.ts  types.ts
frontend/src/components/GroundTrack/: GroundTrack.module.css  GroundTrack.tsx
frontend/src/components/Header/: Header.module.css  Header.tsx
frontend/src/components/SatellitePasses/: ElevationChart.tsx  PolarPlotDialog.tsx  SatellitePasses.module.css  SatellitePasses.tsx
frontend/src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx
frontend/src/components/TaskModal/: TaskModal.module.css  TaskModal.tsx
frontend/src/components/TaskTable/: TaskTable.module.css  TaskTable.tsx
frontend/src/components/Timeline/: TaskTimeline.module.css  TaskTimeline.tsx
frontend/src/components/WidgetGrid/: WidgetGrid.module.css  WidgetGrid.tsx
frontend/src/screens/Dashboard/: Dashboard.module.css  Dashboard.tsx
frontend/src/theme/: colors.ts  global.css  variables.css
src/: config.rs  frontend.rs  lib.rs  main.rs  predict.rs  scheduler.rs  server.rs
src/api/: auth.rs  error.rs  mod.rs  predict.rs  station.rs  tasks.rs  templates.rs
src/predict/: mod.rs  utils.rs
src/schedule/: parser.rs  runner.rs  utils.rs
src/task/: format.rs  mod.rs  parser.rs  runner.rs  utils.rs
src/tracker/: mod.rs  rotctl.rs  update.rs  utils.rs
