[package]
name = "sat-o-mat"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
humantime = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "fs", "sync"] }
tracing = "0.1"
libc = "0.2"
notify = "8.2.0"

[dev-dependencies]
tempfile = "3"
tracing-test = "0.2.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
